@@ -38,6 +38,7 @@ Bug fixes
  * Site.get_site_root_paths() preferring other sites over the default when some sites share the same root_page (Andy Babic)
  * Pages with missing model definitions no longer crash the API (Abdulmalik Abdulwahab)
  * Strip null characters from paths when checking for redirects (Andrew Crewdson)
+ * Rich text image chooser no longer skips format selection after a validation error (Matt Westcott)
 
 Upgrade considerations
 ======================
